--- a/makerlab-website/_sass/_main.scss
+++ b/makerlab-website/_sass/_main.scss
@@ -1,6 +1,6 @@
 body, input, select, textarea {
     color: rgba(255, 255, 255, 1);
-    font-family: "Chivo", Arial, Helvetica, sans-serif;
+    font-family: $base-font-family;
 }
 
 #sidebar, #header {
@@ -10,20 +10,20 @@ body, input, select, textarea {
 }
 
 #sidebar nav a, #header nav a {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $secondary-font-family;
     font-size: .7em;
-    color: rgba(255, 255, 255, 0.45);
+    color: $link-text;
 }
 
 #sidebar nav a:before {
-    background: rgba(110, 204, 175, .2);
+    background: $nav;
 }
 
 #sidebar nav a:after {
-    background-image: -moz-linear-gradient(to right, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: -webkit-linear-gradient(to right, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: -ms-linear-gradient(to right, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: linear-gradient(to right, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
+    background-image: -moz-linear-gradient(to right, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: -webkit-linear-gradient(to right, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: -ms-linear-gradient(to right, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: linear-gradient(to right, $makerlab-green, rgba(240, 243, 189, 1));
     -moz-transition: max-width 0.2s ease;
     -webkit-transition: max-width 0.2s ease;
     -ms-transition: max-width 0.2s ease;
@@ -32,10 +32,10 @@ body, input, select, textarea {
 }
 
 h1.major:after {
-    background-image: -moz-linear-gradient(to left, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: -webkit-linear-gradient(to left, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: -ms-linear-gradient(to left, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
-    background-image: linear-gradient(to left, rgba(110, 204, 175, 1), rgba(240, 243, 189, 1));
+    background-image: -moz-linear-gradient(to left, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: -webkit-linear-gradient(to left, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: -ms-linear-gradient(to left, $makerlab-green, rgba(240, 243, 189, 1));
+    background-image: linear-gradient(to left, $makerlab-green, rgba(240, 243, 189, 1));
     -moz-transition: max-width 0.2s ease;
     -webkit-transition: max-width 0.2s ease;
     -ms-transition: max-width 0.2s ease;
@@ -54,7 +54,7 @@ h1.major:after {
 }
 
 .wrapper.style3 {
-    background-color: rgba(2, 128, 144, 1);
+    background-color: $grey;
 }
 
 #intro {
@@ -69,7 +69,7 @@ h1.major:after {
 }
 
 h1, h2, h3, .title {
-    font-family: "Chivo", Arial, Helvetica, sans-serif;
+    font-family: $base-font-family;
 }
 
 #header > nav > ul > li a {
@@ -121,14 +121,14 @@ footer .icon:hover {
 }
 
 #main {
-    background-color: rgba(2, 128, 144, 1);
+    background-color: $grey;
 }
 
 .contact-text {
     text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $secondary-font-family;
     font-size: .7em;
-    color: rgba(255, 255, 255, 0.45);
+    color: $link-text;
     font-weight: bold;
     letter-spacing: 0.25em;
     line-height: 1.75;
