--- a/makerlab-website/_includes/footer.html
+++ b/makerlab-website/_includes/footer.html
@@ -1,11 +1,9 @@
-<footer id="footer" class="wrapper style1-alt">
-    <div class="inner">
-        <center>
-            <div class="contact-text">Contact the MakerLab</div>
-            <a href="https://www.facebook.com/brandeismakerlab/?fref=ts"><span class="icon fa-facebook"></span></a>
-            <a href=""><span class="icon fa-twitter"></span></a>
-            <a href=""><span class="icon fa-instagram"></span></a>
-            <a href=""><span class="icon fa-envelope-o"></span></a>
-        </center>
-    </div>
+<footer>
+    <center>
+        <div class="contact-text">Contact the MakerLab</div>
+        <a href="https://www.facebook.com/brandeismakerlab/?fref=ts"><span class="icon fa-facebook"></span></a>
+        <a href=""><span class="icon fa-twitter"></span></a>
+        <a href=""><span class="icon fa-instagram"></span></a>
+        <a href=""><span class="icon fa-envelope-o"></span></a>
+    </center>
 </footer>
