--- a/makerlab-website/_sass/_variables.scss
+++ b/makerlab-website/_sass/_variables.scss
@@ -2,7 +2,18 @@ $base-font-family: "Chivo", Arial, Helvetica, sans-serif;
 $secondary-font-family: Arial, Helvetica, sans-serif;
 
 // colors
-$link-text: rgba(255, 255, 255, 0.45);
-$grey: rgba(2, 128, 144, 1);
-$nav: rgba(110, 204, 175, .2);
-$makerlab-green: rgba(110, 204, 175, .2);
+$makerlab-green: rgba(20, 185, 154, 1);
+$makerlab-green-medium: darken($makerlab-green, 10%);
+
+$purple: rgba(49, 36, 80, 1);
+$teal: rgba(2, 128, 144, 1);
+$dark-blue: rgba(5, 102, 141, 1);
+$bright-purple: rgba(80, 82, 181, 1);
+$blue: rgba(0, 86, 141, 1);
+
+$black-45: rgba(255, 255, 255, 0.45);
+$white-75: rgba(255,255,255,.7);
+
+// box shadows and borders
+$box-shadow: rgba(0,0,0,0.10);
+$border: rgba(0,0,0,.05);
