--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,8 @@
             <li><a href="/workspaces">Workspaces</a></li>
             <li><a href="/training">Training</a></li>
             <li><a href="/people">People and Groups</a></li>
-            <li><a href="/blog">Blog</a></li>
+            <li><button href="">Donate!</button></li>
+            <!-- <li><a href="/blog">Blog</a></li> -->
             <li class="icon">
                 <a href="javascript:void(0);" style="font-size:15px;" onclick="navigation()">☰</a>
             </li>
