--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <center>
         <div class="contact-text">Contact the MakerLab</div>
         <a href="https://www.facebook.com/brandeismakerlab/?fref=ts"><span class="icon fa-facebook"></span></a>
-        <a href=""><span class="icon fa-twitter"></span></a>
-        <a href=""><span class="icon fa-instagram"></span></a>
-        <a href=""><span class="icon fa-envelope-o"></span></a>
+        <!-- <a href=""><span class="icon fa-twitter"></span></a> -->
+        <a href="https://www.instagram.com/brandeismakerlab/"><span class="icon fa-instagram"></span></a>
+        <a href="mailto:makerlab@brandeis.edu"><span class="icon fa-envelope-o"></span></a>
     </center>
 </footer>
