--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,4 @@
-$base-font-family: "Chivo", Arial, Helvetica, sans-serif;
+$base-font-family: Century Gothic W01 Bold, Arial, Helvetica, sans-serif;
 $secondary-font-family: Arial, Helvetica, sans-serif;
 
 // colors
