--- a/_sass/extras.scss
+++ b/_sass/extras.scss
@@ -580,6 +580,7 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     height: auto;
     width: 100%;
     overflow: scroll;
+    padding-top: 1em;
 }
 
 form {
