--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,8 @@ layout: default
 <div class="wrapper">
     <section id="main">
         <h1 class="major">{{ page.title }}</h1>
-        {{ content }}
+        <div class="content">
+            {{ content }}
+        </div>
     </section>
 </div>
