Anne's changes, Friday

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,5 +5,6 @@
         <!-- <a href=""><span class="icon fa-twitter"></span></a> -->
         <a href="https://www.instagram.com/brandeismakerlab/"><span class="icon fa-instagram"></span></a>
         <a href="mailto:makerlab@brandeis.edu"><span class="icon fa-envelope-o"></span></a>
+        <a href="https://www.youtube.com/channel/UCdqXpHOpI83oZ6-8_mEKPfw"><span class="icon fa-youtube-play"></span></a>
     </center>
 </footer>
