--- a/_includes/makers-in-residence.html
+++ b/_includes/makers-in-residence.html
@@ -1,6 +1,9 @@
-<section>
+<section id="makers-in-residence">
 	<div class="indented-title">
-	    <h2>Ongoing Maker in Residence Projects</h2>
+	    <h2>Ongoing Maker in Residence Projects <form class="inline-button-link" method="LINK" action="/projects">
+				<input TYPE="submit" value="See more projects" class="tiny-button">
+			</form>
+		</h2>
 	</div>
 	<div class="spotlights">
         <section>
