--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -3,12 +3,14 @@ body, input, select, textarea {
     font-family: $secondary-font-family;
     font-size: 15px;
 }
-.pure-u-lg-1-2, .pure-u-lg-12-24, .pure-u-1-3, .pure-u-1, .pure-u-lg-1-3 {
+.pure-u-lg-1-2, .pure-u-lg-12-24, .pure-u-1-3, .pure-u-1, .pure-u-lg-1-3, .pure-u-1-5 {
     padding-left: 1em;
     padding-right: 1em;
 }
 .spotlights > section > .content {
     padding-top: 1em;
+    max-width: 80em;
+    width: auto;
 }
 
 /* text */
@@ -234,6 +236,9 @@ footer a {border-bottom: none;}
 }
 
 /* sections */
+.section {
+    padding: 3em 6em 3em 5em;
+}
 .features {
     border: none;
     background: none;
@@ -243,6 +248,12 @@ footer a {border-bottom: none;}
 }
 .teal {
     background-color: $teal;
+}
+.makerlab-green-medium {
+    background-color: $makerlab-green-medium;
+}
+.makerlab-green {
+    background-color: $makerlab-green;
 }
 #projects {
     background-color: $bright-purple;
@@ -254,7 +265,7 @@ footer a {border-bottom: none;}
     background-color: $makerlab-green;
     overflow:hidden;
 }
-@media screen and (max-width:1329px) {
+@media screen and (max-width:1246px) {
     #main {
         padding-top: 10em;
     }
@@ -273,11 +284,11 @@ footer a {border-bottom: none;}
     padding: 5em 5em 3em 5em ;
     max-width: 100%;
 }
-.wrapper > #activities,#tools {
-    padding: 3em 5em 2em 5em;
+.wrapper #activities,#tools {
+    padding: 2em 2em 1em 2em;
 }
 .indented-title {
-    padding: 3em 3em 2em 5em;
+    padding: 2em 2em 2em 5em;
 }
 @media screen and (max-width:680px) {
     .wrapper > section, .indented-title {
@@ -346,4 +357,43 @@ input[type="submit"], input[type="reset"], input[type="button"], button, .button
 
 .SOFIYAS-BOX .pure-img {
     padding: 1em 3em 2em 2em;
+}
+
+#get-involved {
+    background-color: $teal;
+}
+
+.tiny-button {
+    background-color: rgba(250,250,250,.96)!important;
+    padding: 0.45em 1em !important;
+    margin-left: 0.5em !important;
+    letter-spacing: 0.2em !important;
+    font-size: 10.5px !important;
+    vertical-align: middle;
+    color: $makerlab-green!important;
+}
+#makers-in-residence .tiny-button {
+    color: $purple !important;
+}
+.tiny-button:hover,#makers-in-residence .tiny-button:hover {
+    background-color: inherit!important;
+    color: white!important;
+}
+
+.icon.fa-check {
+    color: $makerlab-green;
+}
+
+.carouselWrapper {
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
+.resources-title {
+    padding-right: 2em;
+}
+
+.border-left {
+    border-left: solid 1px rgba(255, 255, 255, 0.15);
+    padding-left: 1em;
 }
