--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,14 @@
 <nav>
     <ul class="topnav" id="navigation">
             <li><a href="/">Home</a></li>
-            <li><a href="/news">News and Events</a></li>
+            <li><a href="/news">Training and Events</a></li>
             <li><a href="/resources">Resources</a></li>
             <li><a href="/projects">Featured Projects</a></li>
             <li><a href="/workspaces">Workspaces</a></li>
-            <li><a href="/training">Training</a></li>
             <li><a href="/people">People and Groups</a></li>
-            <li><a href="https://blogs.brandeis.edu/makerlab/">Blog</a></li>
+            <li><a href="https://blogs.brandeis.edu/makerlab/" target="_blank">Blog</a></li>
             <li>
-                <form method="LINK" action="http://giving.brandeis.edu/makerlab">
+                <form method="LINK" action="http://giving.brandeis.edu/makerlab" target="_blank">
                     <input TYPE="submit" value="Donate!">
                 </form>
             </li>
