--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -54,6 +54,16 @@ p {
     }
 }
 
+a:visited {
+    -moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    -webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    -ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    transition: color 0.2s ease, border-bottom-color 0.2s ease;
+    border-bottom: dotted 3px purple;
+    color: inherit;
+    text-decoration: none;
+}
+
 /* nav */
 nav, #header {
     background: $makerlab-green;
@@ -213,16 +223,14 @@ footer .icon {
     width: 2.5em;
     height: 2.5em;
     display: inline-block;
-    background: white;
     border-radius: 100%;
-    color: $blue;
     text-align: center;
     line-height: 2.5em;
     margin: 1em .35em 1em .35em;
 }
 footer .icon:hover {
-    color: white;
-    background-color: $blue;
+    color: $blue;
+    background-color: white;
 }
 footer a {border-bottom: none;}
 .contact-text {
