--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -12,6 +12,14 @@ body, input, select, textarea {
     max-width: 80em;
     width: auto;
 }
+@media screen and (max-width: 736px) {
+    .spotlights > section > .content {
+        padding: 1em 1em 1em 1em;
+    }
+    .slick-slider {
+        margin-bottom: 10px !important;
+    }
+}
 
 /* text */
 h1.major {
@@ -155,15 +163,21 @@ h1, h2, h3, .title {
     width: 100%;
     margin-bottom: 3em;
     font-weight: 500;
+    display: table;
 }
 #makerlab-text h1 {
     border: 15px solid white;
-    padding: 0em .2em 0em .2em;
+    padding: 0em !important;
     margin: 0px;
     font-weight: 900;
     font-size: 5em;
     letter-spacing: .1em;
     display: inline;
+}
+@media screen and (max-width:1048px) {
+    #makerlab-text h1 {
+        border: none;
+    }
 }
 @media screen and (max-width:925px) {
     #intro {
@@ -188,14 +202,22 @@ h1, h2, h3, .title {
 @media screen and (max-width:500px) {
     #makerlab-text h1 {
         font-size: 3em;
-        border: 10px solid white;
+    }
+    .features section .icon {
+        left: 0em !important;
+        top: .5em !important;
+    }
+    .features section {
+        padding: 0px !important;
     }
 }
 @media screen and (max-width:440px) {
     #makerlab-text h1 {
-        border: 6px solid white;
         padding: 0em .2em 0em .2em;
         font-size: 3em;
+    }
+    .features {
+        margin: 0px;
     }
 }
 @media screen and (max-width:428px) {
@@ -207,6 +229,11 @@ h1, h2, h3, .title {
         margin-bottom: 2em;
     }
 }
+// * {
+//   background: #000 !important;
+//   color: #0f0 !important;
+//   outline: solid #f00 1px !important;
+// }
 
 .features section .icon {
     left: 2em;
@@ -245,7 +272,7 @@ footer a {border-bottom: none;}
 
 /* sections */
 .section {
-    padding: 3em 6em 3em 5em;
+    padding: 2em 5em 2em 4em;
 }
 .features {
     border: none;
@@ -292,20 +319,20 @@ footer a {border-bottom: none;}
     padding: 5em 5em 3em 5em ;
     max-width: 100%;
 }
-.wrapper #activities,#tools {
-    padding: 2em 2em 1em 2em;
-}
 .indented-title {
     padding: 2em 2em 2em 5em;
 }
 @media screen and (max-width:680px) {
     .wrapper > section, .indented-title {
-        padding: 2em 3em 2em 3.5em;
+        padding: 1em 2em 1em 2em;
+    }
+    .section {
+        padding: 2em 2em 2em 2em;
     }
 }
 @media screen and (max-width:400px) {
     .wrapper > section, .indented-title {
-        padding: 2em 2em 1em 2em;
+        padding: 1em 1em 1em 1em;
     }
 }
 
@@ -404,4 +431,9 @@ input[type="submit"], input[type="reset"], input[type="button"], button, .button
 .border-left {
     border-left: solid 1px rgba(255, 255, 255, 0.15);
     padding-left: 1em;
+}
+@media screen and (max-width:1023px) {
+    .border-left {
+        border: none;
+    }
 }
