--- a/_includes/makers-in-residence.html
+++ b/_includes/makers-in-residence.html
@@ -1,8 +1,12 @@
 <section id="makers-in-residence">
 	<div class="indented-title">
-	    <h2>Ongoing Maker in Residence Projects <form class="inline-button-link" method="LINK" action="/projects">
+	    <h2>Ongoing Maker in Residence Projects
+			<form class="inline-button-link" method="LINK" action="/projects">
 				<input TYPE="submit" value="See more projects" class="tiny-button">
 			</form>
+			<form class="inline-button-link" method="LINK" action="/mir">
+					<input TYPE="submit" value="Learn about the program" class="tiny-button">
+				</form>
 		</h2>
 	</div>
 	<div class="spotlights">
