--- a/_includes/makers-in-residence.html
+++ b/_includes/makers-in-residence.html
@@ -21,7 +21,7 @@
     		</div>
     	</section>
         <section>
-    		<div class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+    		<div class="image" style="background-image: url('/assets/images/liz.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
     		<div class="content">
     			<div class="inner">
     				<h2>Liz Washington</h2>
@@ -31,7 +31,7 @@
     		</div>
     	</section>
         <section>
-    		<div class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+    		<div class="image" style="background-image: url('/assets/images/matt.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
     		<div class="content">
     			<div class="inner">
     				<h2>Matt Groth</h2>
@@ -41,7 +41,7 @@
     		</div>
     	</section>
         <section>
-    		<div class="image" style="background-image: url('/assets/images/graybiel.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
+    		<div class="image" style="background-image: url('/assets/images/josh.jpg');background-position: 50% 50%;" alt="" data-position="center center"/></div>
     		<div class="content">
     			<div class="inner">
     				<h2>Josh Goldberg</h2>
