--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,3 +17,14 @@ $white-75: rgba(255,255,255,.7);
 // box shadows and borders
 $box-shadow: rgba(0,0,0,0.10);
 $border: rgba(0,0,0,.05);
+
+//spacing
+$large-container-padding: 3em 5em 3em 5em;
+$medium-container-padding: 2em 4em 2em 4em;
+$small-container-padding: 1em 2em 1em 2em;
+$small-spacer: 2em;
+$medium-spacer: 5em;
+$large-spacer: 7em;
+$small-text-spacer: .2em;
+$medium-text-spacer: .5em;
+$large-text-spacer: .7em;
